[package]
name = "deno-dom-wasm"
version = "0.1.0"
authors = ["b-fuze <b-fuze.root@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
html5ever = "0.25.1"
markup5ever = "0.10.0"
serde_json = "1.0"
serde = "1.0.111"
wasm-bindgen = "0.2.63"

[dependencies.web-sys]
version = "0.3.4"
features = ['Window', 'Performance', 'PerformanceTiming']

