[package]
name = "plugin"
version = "0.1.0"
authors = ["b-fuze <b-fuze.root@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.5"
deno_core = "0.47.1"
core = { path = "../core" }

