[package]
name = "plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
core = { path = "../core" }

# Allow running Deno DOM Native in a Windows Sandbox
[build-dependencies]
static_vcruntime = "2.0"
