[package]
name = "deno-dom-wasm"
version = "0.1.0"
authors = ["b-fuze <b-fuze.root@live.com>"]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-mutable-globals"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.100"
core = { path = "../core" }

